0. Kubernetes Dashboard/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name:  kube-ingress
  namespace: kube-system
  annotations:  
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - kube.vaayadi.in
    secretName: kube.vaayadi.in
  rules:
  - host: kube.vaayadi.in
    http:
      paths:
      - backend:
          serviceName: kubernetes-dashboard-1570635568
          servicePort: 8080
